--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,11 @@ body {
   font-weight: 300;
 }
 
+@media (max-width: 576px) {
+  body{
+    max-width: 100%;
+  }
+}
 
 .font-bold{
   font-weight: 600;
